修复后端编译错误：统一实体类时间字段方法名
- 修复 GlobalValidation.java 缺失的 FIELD_CANNOT_BE_EMPTY 常量
- 修复 BaseEntity 实体使用 createTime/updateTime，但 ServiceImpl 调用 getCreatedAt/setCreatedAt 的问题
- 修复 SessionReadProgress、UnreadSyncQueue 等非 BaseEntity 实体的 getUpdatedAt 方法
- 修复 FriendApplicationVO 的 setUpdatedAt 为 setUpdateTime

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>